# SCalcBase

./: CMakeLists.txt  README.md
grammar/: SCalc.g4
src/: CMakeLists.txt  main.cpp
tests/: SCalcConfigCS.json  SCalcConfigInterpreterOnly.json
